Check Point before css animiation

--- a/query.html
+++ b/query.html
@@ -53,6 +53,6 @@
   <!-- Shared core -->
   <script defer src="app.js"></script>
   <!-- Query page wiring -->
-  <script defer src="query.js"></script>
+  <script defer src="query.js?v=20260211a"></script>
 </body>
 </html>
