--- a/upload.html
+++ b/upload.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  
+  <header class="topbar">
+    <a class="link" href="index.html">← Home</a>
+    <div class="spacer"></div>
+    <a class="link" href="query.html">Go to Query →</a>
+  </header>
   <main class="page">
     <h1>Upload / Add Schedules</h1>
 
@@ -61,7 +65,7 @@
 
         <div id="schedulesList"></div>
       </aside>
-
+    
     </div>
 
     <!-- Preview modal -->
